# Software_Sandbox

./: .gitignore  README.md
Challenges/: README.md
Challenges/CHALLENGE-1/: CMakeLists.txt  README.md  package.xml
Challenges/CHALLENGE-1/src/: camera_input_node.cpp  orange_buoy_detection_node.cpp
gazebo/: README.md
linux/: README.md
qt/: README.md
ros/: README.md
ros/src/: README.md
ros/src/classes/: CMakeLists.txt  README.md  package.xml
ros/src/classes/launchfiles/: local.launch
ros/src/classes/msg/: newmsg.msg
ros/src/classes/src/: msg_pub.cpp  msg_sub.cpp
ros/src/launchfiles/: CMakeLists.txt  README.md  global.launch
ros/src/launchfiles/launchfiles/: local.launch
ros/src/launchfiles/src/: publisher.cpp
ros/src/msg/: CMakeLists.txt  package.xml
ros/src/msg/launchfiles/: local.launch
ros/src/msg/src/: msg_sub.cpp
ros/src/msg/srv/: newmsg.srv
ros/src/serialtest/: CMakeLists.txt  device.py  package.xml  serial.launch
ros/src/serialtest/src/: serialtest_node.cpp
ros/src/services/: CMakeLists.txt  README.md  package.xml
ros/src/services/src/: service.cpp
ros/src/servicestest/: CMakeLists.txt  package.xml
ros/src/servicestest/src/: client.cpp  service.cpp
ros/src/servicestest/srv/: myservice.srv
ros/src/topic/: CMakeLists.txt  README.md  package.xml
ros/src/topic/src/: publisher.cpp  subscriber.cpp
ros/src/topictest/: CMakeLists.txt  README.md  package.xml
ros/src/topictest/launchfiles/: launchfile.launch  local.launch
ros/src/topictest/src/: publisher.cpp  subscriber.cpp
system_tests/: README.md
system_tests/src/latency_test/: CMakeLists.txt  package.xml
system_tests/src/latency_test/include/latency_test/: latencyConfig.txt
system_tests/src/latency_test/msg/: dataSizeOne.msg
system_tests/src/latency_test/src/: latency_listener.cpp  latency_master.cpp  latency_slave.cpp  latency_talker.cpp
vision/: README.md
vision/src/OpenCVSamples1/: CMakeLists.txt  package.xml
vision/src/OpenCVSamples1/launch/: many_bananas.launch
vision/src/OpenCVSamples1/src/: banana_test.cpp  camera_calibration.cpp  colour_node.cpp  dewarp_node.cpp  fisheye_node.cpp  fps_test.cpp  freak_test.cpp  imgEdgeTracker.cpp  imgRedTracker.cpp  orientation_test.cpp  point_grey.cpp  video_classifier.cpp  video_classiwriter.cpp  video_writer.cpp
vision/src/OpenCVSamples1/test_images/: buoy_cascade.xml  buoy_cascade2.xml  buoy_cascade3.xml  buoy_classifier1.xml  buoy_classifier2.xml  dewarpConfig.txt  haarcascade_frontalface_alt.xml  lbpcascade_frontalcatface.xml  marker_classifier1.xml
vision/src/OpenCVSamples2/: CMakeLists.txt  package.xml
vision/src/OpenCVSamples2/src/: banana_test.cpp  colourEdge_node.cpp  contour_node.cpp  edge_node.cpp  fisheye_node.cpp  gui_cam.cpp  imgRedTracker.cpp  shape_node.cpp  static_face.cpp  static_node.cpp  tf_test.cpp
vision/src/OpenCVTutorials/colorDetection/: README.md  colorDetectionSample.cpp
vision/src/classifierDetection/: CMakeLists.txt  README.md  classifierDetectionSample.cpp
vision/src/colorDetection/: CMakeLists.txt
vision/src/colorDetection/python/: face_detect.py
vision/src/edgeDetection/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  edgeDetectionSample  edgeDetectionSample.cpp
