<?xml version="1.0"?>
<package>
  <name>classes</name>
  <version>0.1.0</version>
  <description>The motor_controller package</description>
  <maintainer email="asinha@todo.todo">asinha</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>


</package>
