<?xml version="1.0"?>
<package>
  <name>servicestest</name>
  <version>0.0.0</version>
  <description>The example package</description>
  <maintainer email="asinha@uvic.ca">anu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>